# lifeos_skeleton

./: .gitignore  .gitinore  APPLICATIONS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE.md  MANIFEST.in  QUICKSTART.md  README.md  ROADMAP.md  TEST_REPORT.md  analyze_results.py  analyze_results_extended.py  demo.py  gitignore  make_report.py  monitor_resources.py  requirements.txt  run_adam_eve.py  run_experiment.py  setup.cfg  visualize_lineage.py  visualize_report.py
.github/workflows/: tests.yml
bench/: prime_bench.py
configs/: adam_eve.yaml  adam_eve_debug.yaml  adam_eve_free.yaml  adam_eve_psai.yaml  sample_large.yaml  sample_medium.yaml  sample_small.yaml  stress_extreme.yaml  stress_large.yaml  stress_medium.yaml
docs/: REPORTING_AND_VISUALS.md  RUNNING_SIMULATIONS.md  TEST_REPORT.md  TEST_REPORT_ADAM_EVE.md  TEST_REPORT_EXTREME.md  TEST_REPORT_SENTIENT.md  adam_eve_tests.md  reproducibility.md  testing.md
lifeos/: __init__.py  adam_eve_engine.py  adam_eve_memory.py  adam_eve_rules.py  environment.py  genome.py  lineage.py  multiverse_engine.py  policy.py  reproduction.py  sentient_mk6.py  test_vault.py  traits.py  vault.py
lifeos_skeleton/: analyze_results.py  run_experiment.py
lifeos_skeleton.egg-info/: PKG-INFO  SOURCES.txt
notebooks/: compare_metrics.py  quick_compare.py
tests/: test_adam_eve.py  test_adam_eve_free.py  test_lineage.py  test_multiverse.py  test_pipeline_small.py  test_reproduction.py  test_time_mapping.py  test_traits.py
tools/: add_digital_years.py  analyze_and_report.py  analyze_results.py  visualize_lineage_pdf.py
(+34 files in other folders)
