[metadata]
name = lifeos-skeleton
version = 0.1.0
author = Frank McNally
author_email = your-email@example.com
description = A DNA-inspired framework for simulating digital beings in multiverse environments
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrankoMcNally/lifeos_skeleton
license = MIT
license_files = LICENSE.md
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Artificial Life

[options]
packages = find:
python_requires = >=3.9
install_requires =
    pytest
