[metadata]
name = lifeos-skeleton
version = 0.1.0
author = Frank McNally
author_email = your-email@example.com
description = A DNA-inspired framework for simulating digital beings
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/FrankoMcNally/lifeos_skeleton
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = lifeos_skeleton
python_requires = >=3.8
install_requires =
    pytest

[options.packages.find]
where = lifeos_skeleton
